# awcy-nfo

./: README.md  README.rst  build_linux.sh  build_windows.bat  entry_point.py  pyproject.toml
awcy_nfo/: __init__.py  cli.py  helpers.py  readme.py  serializable.py
awcy_nfo/docs/: example.yaml
awcy_nfo/headers/: bloody.txt  chilled.txt  poki.txt  royal.txt  vandal.txt
awcy_nfo/styles/: classic.yaml
tests/: test_awcy_nfo.py
